# COMP382-Assignment_1

./: README.md  pyproject.toml
src/comp382_assignment_1/: main.py
src/comp382_assignment_1/common/: symbols.py
src/comp382_assignment_1/gui/: app_config.py  components.py  constants.py  footer.py  footer_point.py  header.py  heading_label.py  input_bar.py  keyboard_button.py  left_sidebar.py  main_panel.py  main_window.py  regex_sample_dropdown.py  right_panel.py  section_step_1.py  section_step_2.py  separator.py  sidebar_info_point.py  status_indicator.py  strings.json  utils.py  validated_line_edit.py  virtual_keyboard.py
src/comp382_assignment_1/gui/strings/: en.json
src/comp382_assignment_1/gui/styles/: components.css  left_sidebar.css  main_window.css  section_step_1.css  section_step_2.css  status_indicator.css
src/comp382_assignment_1/logic/: matcher.py  regex_validator.py
src/comp382_assignment_1/tests/: test_matcher.py
src/comp390_assignment_1/: main.py
tests/: test_main.py
