[project]
name = "COMP382-Assignment_1"
version = "0.1.0"
description = "Python based app to test a string against a regex pattern"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.1",
]

[project.scripts]
main = "comp382_assignment_1.main:main"
test = "pytest:console_main"

[build-system]
requires = ["uv_build>=0.7.0,<0.8.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
